--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name = "delete">Delete</string>
     <string name = "version">Version</string>
     <string name = "log_out">Log Out</string>
+    <string name="confirm_xia_class">下课并评价</string>
 </resources>
